--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
 <resources>
 
     <string name="app_name">Colloquium2</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="add_candidate">Добавить кандидата</string>
+    <string name="default_text">Lorem Ipsum</string>
+    <string name="hint_name">Имя кандидата…</string>
 
 </resources>
